--- a/ciardle.html
+++ b/ciardle.html
@@ -871,7 +871,7 @@ async function getCarHint() {
   // IMPORTANT: For deployment outside of this Canvas environment (e.g., GitHub Pages),
   // you MUST provide your actual Gemini API key here.
   // Get your API key from: https://aistudio.google.com/app/apikey
-  const apiKey = ""; // PASTE YOUR GEMINI API KEY HERE
+  const apiKey = "AIzaSyBmAjWtkH6R9It2PaEydaoS8oj8-8P8TbY"; // Your Gemini API Key
   const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
 
   try {
