Added API key back in for hints

--- a/ciardle.html
+++ b/ciardle.html
@@ -1168,7 +1168,7 @@
     // SECURITY NOTE: Hardcoding an API key in client-side code is a security risk.
     // In a production environment, this key should be stored securely on a server
     // and accessed via a backend endpoint to prevent unauthorized use.
-    const apiKey = "";
+    const apiKey = "AIzaSyBmAjWtkH6R9It2PaEydaoS8oj8-8P8TbY";
     const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
     try {
@@ -1431,3 +1431,4 @@
 
 </body>
 </html>
+
